--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+/* .playwrite-gb-s-mainapp{
+  font-family: "Playwrite GB S", cursive !important;
+  font-optical-sizing: auto;
+ 
+  font-style: normal;
+} */
+.raleway {
+  font-family: "Raleway", serif !important;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+/* * {
+  font-family: "Playwrite GB S", serif !important;
+  font-style: normal; 
+}  */
+
+
+
 .testimonials-carousel .carousel .control-dots {
   bottom: -2px;
   text-align: center; /* Adjust this value to position the indicators */
